--- a/src/App.css
+++ b/src/App.css
@@ -114,8 +114,8 @@ label {
     background-color: var(--slate-900);
     border-top: 2px solid var(--lime);
     border-radius: .3rem;
-    width: 90%;
-    height: 13rem;
+    width: 95%;
+    height: 15rem;
     padding: 1.2rem;
     display: flex;
     flex-direction: column;
@@ -130,7 +130,7 @@ label {
 }
 
 hr {
-    margin: 1rem 0;
+    margin: 1.5rem 0;
     background-color: #aaa9;
     border: none;
     height: 1px;
@@ -139,13 +139,14 @@ hr {
 .value {
     color: var(--lime);
     font-weight: 700;
-    font-size: 2.3rem;
+    font-size: 2.7rem;
 }
 
 .second-value {
     color: var(--white);
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    margin-top: .2rem;
 }
 
 [type="text"] {
