--- a/src/App.css
+++ b/src/App.css
@@ -166,12 +166,12 @@ hr {
 }
 
 .first-radio-btn, .second-radio-btn {
-    border: 1px solid #aaa;
     margin: .2rem 0;
     height: 2.5rem;
     align-content: center;
     padding: 0 .5rem;
     cursor: pointer;
+    accent-color: green;
 }
 
 .first-radio-btn label, .second-radio-btn label {
