--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --lime: hsl(61, 70%, 52%);
   --dark-lime: hsl(61, 64%, 46%);
   --lime-opacity: hsla(61, 70%, 52%, .5);
+  --lime-semi-transparent: hsla(61, 70%, 52%, .1);
   --red: hsl(4, 69%, 50%);
   /* Neutral Colors */
   --white: hsl(0, 0%, 100%);
